2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PiePlot.java
	(sectionPaint): Removed,
	(sectionOutlinePaint): Likewise,
	(sectionOutlineStroke): Likewise,
	(PiePlot(PieDataset)): Updated for removed fields,
	(lookupSectionPaint): No longer any override,
	(getSectionPaint): Removed,
	(setSectionPaint): Likewise,
	(lookupSectionOutlinePaint): No longer any override,
	(getSectionOutlinePaint): Removed,
	(setSectionOutlinePaint): Likewise,
	(lookupSectionOutlineStroke): No longer any override,
	(getSectionOutlineStroke): Removed,
	(setSectionOutlineStroke): Likewise,
	(drawItem): Updated for removed method,
	(equals): Updated for removed fields,
	(writeObject): Likewise,
	(readObject): Likewise,
	* tests/org/jfree/chart/plot/PiePlotTests.java
	(testEquals): Updated for removed fields.
	
2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/ColorPalette.java: Removed,
	* source/org/jfree/chart/plot/GreyPalette.java: Likewise,
	* source/org/jfree/chart/plot/RainbowPalette.java: Likewise,
	* tests/org/jfree/chart/plot/junit/ColorPaletteTests.java: Likewise,
	* tests/org/jfree/chart/plot/junit/PlotPackageTests.java
	(suite): Removed ColorPaletteTests.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/labels/ContourToolTipGenerator.java:
	Removed, previously deprecated,
	* source/org/jfree/chart/labels/StandardContourToolTipGenerator.java:
	Likewise,
	* tests/org/jfree/chart/labels/junit/LabelsPackageTests.java
	(suite): Removed StandardContourToolTipGeneratorTests.java,
	* tests/org/jfree/chart/labels/junit/StandardContourToolTipGeneratorTests.java:
	Removed, previously deprecated.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/entity/LegendItemEntity.java
	(seriesIndex): Removed,
	(getSeriesIndex): Likewise,
	(setSeriesIndex): Likewise,
	(equals): Updated for removed field,