@@ -1,78 +1,0 @@
-/* ===========================================================
- * JFreeChart : a free chart library for the Java(tm) platform
- * ===========================================================
- *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
- *
- * Project Info:  http://www.jfree.org/jfreechart/index.html
- *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
- * (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
- * License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
- *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
- * in the United States and other countries.]
- *
- * -------------------------
- * ContourPlotUtilities.java
- * -------------------------
- * (C) Copyright 2002-2007, by David M. O'Donnell and Contributors.
- *
- * Original Author:  David M. O'Donnell;
- * Contributor(s):   David Gilbert (for Object Refinery Limited);
- *
- * $Id: ContourPlotUtilities.java,v 1.2.2.4 2007/04/04 09:07:24 mungady Exp $
- *
- * Changes
- * -------
- * 26-Nov-2002 : Version 1 contributed by David M. O'Donnell (DG);
- * 22-Jul-2003 : Made this class abstract as there is no need to instantiate 
- *               it (DG);
- * ------------- JFREECHART 1.0.x ---------------------------------------------
- * 31-Jan-2007 : Deprecated (DG);
- *
- */
-
-package org.jfree.chart.plot;
-
-import org.jfree.chart.renderer.xy.XYBlockRenderer;
-import org.jfree.data.Range;
-import org.jfree.data.contour.ContourDataset;
-import org.jfree.data.contour.DefaultContourDataset;
-
-/**
- * Some utility methods for the {@link ContourPlot} class.
- * 
- * @deprecated This class is no longer supported (as of version 1.0.4).  If 
- *     you are creating contour plots, please try to use {@link XYPlot} and 
- *     {@link XYBlockRenderer}.
- */
-public abstract class ContourPlotUtilities {
-
-    /**
-     * Returns the visible z-range.
-     *
-     * @param data  the dataset.
-     * @param x  the x range.
-     * @param y  the y range.
-     *
-     * @return The range.
-     */
-    public static Range visibleRange(ContourDataset data, Range x, Range y) {
-        Range range = null;
-        range = ((DefaultContourDataset) data).getZValueRange(x, y);
-        return range;
-    }
-
-}
