@@ -1,64 +1,0 @@
-/* ===========================================================
- * JFreeChart : a free chart library for the Java(tm) platform
- * ===========================================================
- *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
- *
- * Project Info:  http://www.jfree.org/jfreechart/index.html
- *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
- * (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
- * License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
- *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
- * in the United States and other countries.]
- *
- * ---------------------
- * ContourValuePlot.java
- * ---------------------
- * (C) Copyright 2002-2007, by David M. O'Donnell and Contributors.
- *
- * Original Author:  David M. O'Donnell;
- * Contributor(s):   David Gilbert (for Object Refinery Limited);
- *
- * $Id: ContourValuePlot.java,v 1.3.2.4 2007/04/04 09:02:46 mungady Exp $
- *
- * Changes
- * -------
- * 26-Nov-2002 : Version 1 contributed by David M. O'Donnell (DG);
- *
- */
-
-package org.jfree.chart.plot;
-
-import org.jfree.chart.renderer.xy.XYBlockRenderer;
-import org.jfree.data.Range;
-
-/**
- * An interface defining methods related to contour plots.
- * 
- * @deprecated This interface is no longer supported (as of version 1.0.4).  
- *     If you are creating contour plots, please try to use {@link XYPlot} and 
- *     {@link XYBlockRenderer}.
- */
-public interface ContourValuePlot {
-
-    /**
-     * Returns the range of data values to be plotted.
-     *
-     * @return The range.
-     */
-    public Range getContourDataRange();
-
-}
